--- a/DemoApp/packages.config
+++ b/DemoApp/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Caliburn.Micro" version="2.0.2" targetFramework="net451" />
-  <package id="Caliburn.Micro.Core" version="2.0.2" targetFramework="net451" />
-  <package id="Caliburn.Micro.Start" version="2.0.2" targetFramework="net451" />
-  <package id="structuremap" version="3.1.6.186" targetFramework="net451" />
+  <package id="Autofac" version="3.5.2" targetFramework="net451" />
+  <package id="Caliburn.Micro" version="2.0.1" targetFramework="net451" />
+  <package id="Caliburn.Micro.AutofacBootstrap" version="2.0.8" targetFramework="net451" />
+  <package id="Caliburn.Micro.Core" version="2.0.1" targetFramework="net451" />
 </packages>
