--- a/DemoApp/DemoApp.csproj
+++ b/DemoApp/DemoApp.csproj
@@ -79,7 +79,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="DataServices.cs" />
+    <Compile Include="DependencyResolution\DefaultModule.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="ShellView.xaml.cs">
       <DependentUpon>ShellView.xaml</DependentUpon>
     </Compile>
@@ -114,7 +115,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="DependencyResolution\" />
+    <Folder Include="DataAccess\NewFolder1\" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="ShellView.xaml">
